# BlaEngine

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
docs/: Doxyfile.in  README.md  engine-interface.md
include/: README.md  blaengine.h  uci.h
source/: README.md  blaengine.cpp  blaengine.h  main.cpp
source/calculation/: calculator.cpp  calculator.h  evaluator.cpp  evaluator.h  game_state.h  game_state_controller.cpp  game_state_controller.h  gstate_controller.cpp  gstate_controller.h  gstate_translator.cpp  gstate_translator.h  move_generator.cpp  move_generator.h
source/communication/: uci.cpp  uci.h
tests/: evalbenchmark.cpp  helper_for_tests.h  main_uci_dummy_test.cpp  test_blaengine.cpp  test_calculator.cpp  test_evaluator.cpp  test_gamestates.cpp  test_gstate_translator.cpp  test_main.cpp  test_movegenerator.cpp  test_moves_bishop.cpp  test_moves_king.cpp  test_moves_knight.cpp  test_moves_pawn.cpp  test_moves_queen.cpp  test_moves_rook.cpp  test_uci.cpp  test_uci_cin(disabled).cpp  test_whatever.cpp  uci_dummy_engine.cpp
tests/mock_data/: test_gamestates.txt
